--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
+    "mongoimport": "^1.0.6",
     "mongoose": "^6.9.1"
   }
 }
