--- a/server/server.yaml
+++ b/server/server.yaml
@@ -1,22 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: drone-server
+  name: avnet-backend
 spec:
   selector:
     matchLabels:
-      app: drone-server
+      app: avnet-backend
   template:
     metadata:
       labels:
-        app: drone-server
+        app: avnet-backend
     spec:
       containers:
-        - name: drone-server
+        - name: avnet-backend
           image: vannisil/avnet-backend
-          resources:
-            limits:
-              memory: "150Mi"
-              cpu: "700m"
           ports:
             - containerPort: 5000
