--- a/server/ingress.yaml
+++ b/server/ingress.yaml
@@ -2,14 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: avnet-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx-example
-  address: 192.168.49.2
   rules:
-  - host: avnet.epizy.com
-  - http:
+  - host: avnet.evizy.com
+    http:
       paths:
       - path: /
         pathType: Prefix
